--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Arduino</h3>
+            <p>An open-source electronics platform for creating interactive projects using programmable boards.</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Natural Language Processing</h3>
+            <p>An AI that understand and processing human language context</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
